--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
   <groupId>com.javatpoint</groupId>
   <artifactId>Cube</artifactId>
   <packaging>war</packaging>
-  <version>1.1</version>
-  <name>CubeGeneratorWeb Maven Webapp</name>
+  <version>1.0-SNAPSHOT</version>
+  <name>Cube</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
